k8s-project/ten_fe_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ten-fe
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
        track: stable
    spec:
      containers:
        - name: nginx
          image: tensjx/ten:fe1.0.1
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
            requests:
              memory: "200Mi"
              cpu: "200m"
