k8s-project/ten_be_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: ten-be
spec:
  selector:
    app: hello
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
