k8s-project/ten_fe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ten-fe
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
